# not-a-brain

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: edit_log.txt  settings.local.json
chapters/00_setup_and_metrics/: chapter.md  notebook.ipynb  run.py
chapters/01_ngrams/: chapter.md  notebook.ipynb  run.py
chapters/01_ngrams/results/: ch01_bigram.json  ch01_human_agent.json  ch01_trigram.json
chapters/02_ffn_lm/: chapter.md  run.py
chapters/03_rnn_gru/: chapter.md  run.py
chapters/04_attention/: chapter.md  run.py
chapters/05_transformer/: chapter.md  run.py
chapters/06_scaling_laws/: chapter.md  run.py
chapters/07_instruction_tuning/: chapter.md  run.py
chapters/08_preference_and_rlhf/: chapter.md  run.py
chapters/09_decoding_and_hallucination/: chapter.md  run.py
chapters/10_rag_minimal/: chapter.md  run.py
chapters/11_tools_and_function_calls/: chapter.md  run.py
chapters/12_reasoning_scaffolds/: chapter.md  run.py
chapters/13_advanced_reasoning/: chapter.md  run.py
chapters/14_scale_is_not_understanding/: chapter.md  run.py
documentation/: CHAPTER_GUIDE.md  Q_AND_A.md  brain_vs_llm_research.md  implementation.md
src/not_a_brain/: __init__.py
src/not_a_brain/dashboard/: generate.py  (+2 more)
tests/: test_advanced_reasoning.py  test_attention.py  test_decoding.py  test_evals.py  test_ffn_lm.py  test_human_agent.py  test_instruction_tuning.py  test_models.py  test_ngram.py  test_preference.py  test_rag.py  test_reasoning.py  test_rnn_lm.py  test_scale.py  test_scaling.py  test_tasks.py  test_tools.py  test_transformer.py
(+24 files in other folders)
