[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "not-a-brain"
version = "0.1.0"
description = "LLMs from scratch: build tiny models, reproduce memory/hallucination/reasoning, compare with human cognition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "jupyter>=1.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
